--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <br>
-      <img src="/assets/fig-simbol-faculdade.svg" style="width: 100%; height: auto; display: inline">
+      <img src="/assets/fig-simbol-faculdade.png" style="width: 100%; height: auto; display: inline">
       <div style="opacity: 0.85; font-weight: bold; margin-bottom: 0.5em">Unifesspa Femec/IGEM01023 | 2022</div>
       <h1 style="font-size:1em; opacity: 0.95;"><a href="/">Mecânica dos Sólidos</a></h1>
       <div style="line-height:18px; font-size: 15px; opacity: 0.85; font-style: italic;">by <a href="https://mecanica.unifesspa.edu.br/apresentacao-franco.html">Franco Jefferds</a></div>
